GDB-14685 fix transparent copy button
## What
Fix transparent copy button styling for better visibility.

## Why
It was transparent, which didn't look ok in the `copy to input` button in the guides

## How
Extended `.btn-secondary` with `.editor-button`, which adds the provided background color. Also updated the graphql shortcuts button

## Testing
n/a

--- a/packages/workbench/src/app/components/yasgui-component-facade/yasgui-component-facade.component.scss
+++ b/packages/workbench/src/app/components/yasgui-component-facade/yasgui-component-facade.component.scss
@@ -878,7 +878,7 @@ app-yasgui-component-facade .yasr .pivot-table-plugin .pvtFilterBox .pvtSearch {
 .keyboard-shortcuts-dialog-button {
   font-weight: 400;
   color: var(--gw-button-secondary-color) !important;
-  background-color: var(--gw-button-secondary-background) !important;
+  background-color: var(--gw-shortcuts-secondary-button-background ) !important;
   border-color: var(--gw-button-secondary-border-color) !important;
 }
 
